--- a/inc/assets/css/sb-style.css
+++ b/inc/assets/css/sb-style.css
@@ -28,6 +28,49 @@ a {
     text-align: right;
 }
 
+/* Column */
+.wp-block-smart-blocks-columns{
+    margin-top: var(--sb-columns-margin-top-lg, 0);
+    margin-bottom: var(--sb-columns-margin-bottom-lg, 0);
+    margin-left: var(--sb-columns-margin-left-lg, 0);
+    margin-right: var(--sb-columns-margin-right-lg, 0);
+    padding-top: var(--sb-columns-padding-top-lg, 0);
+    padding-bottom: var(--sb-columns-padding-bottom-lg, 0);
+    padding-left: var(--sb-columns-padding-left-lg, 0);
+    padding-right: var(--sb-columns-padding-right-lg, 0);
+    border-style: var(--sb-columns-border-normal, solid);
+    border-color: var(--sb-columns-border-normal-color, transparent);
+    border-top-width: var(--sb-columns-border-normal-width-top, 0);
+    border-bottom-width: var(--sb-columns-border-normal-width-bottom, 0);
+    border-left-width: var(--sb-columns-border-normal-width-left, 0);
+    border-right-width: var(--sb-columns-border-normal-width-right, 0);
+    border-radius: var(--sb-columns-border-normal-radius-top, 0) var(--sb-columns-border-normal-radius-right, 0) var(--sb-columns-border-normal-radius-bottom, 0) var(--sb-columns-border-normal-radius-left, 0);
+    box-shadow: var(--sb-columns-border-normal-box-shadow-inset, ) var(--sb-columns-border-normal-box-shadow-horizontal, 0) var(--sb-columns-border-normal-box-shadow-vertical, 0) var(--sb-columns-border-normal-box-shadow-blur, 0)  var(--sb-columns-border-normal-box-shadow-spread, 0) var(--sb-columns-border-normal-box-shadow-color, transparent); 
+    background-image: var(--sb-columns-bg-img-url);
+    background-attachment: var(--sb-columns-bg-img-attachment);
+    background-position: var(--sb-columns-bg-img-position);
+    background-repeat: var(--sb-columns-bg-img-repeat);
+    background-size: var(--sb-columns-bg-img-size);
+    background-color: var(--sb-columns-bg-color, transparent); 
+}
+
+.wp-block-smart-blocks-columns > .wp-block-smart-blocks-innerblocks-wrap{
+    margin-left: auto;
+    margin-right: auto;
+    gap: var(--sb-columns-gap-lg, 20px);
+    display: flex;
+    align-items: var(--sb-columns-align-lg);
+}
+
+.wp-block-smart-blocks-columns.has-full-width{
+    max-width: var(--sb-columns-width-lg, 1170px);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.wp-block-smart-blocks-columns.has-boxed-width > .wp-block-smart-blocks-innerblocks-wrap{
+    max-width: var(--sb-columns-width-lg, 1170px);
+}
 
 /* Block Title */
 
