--- a/inc/assets/css/admin-style.css
+++ b/inc/assets/css/admin-style.css
@@ -645,6 +645,8 @@
     flex: 1;
     max-width: unset;
     margin: inherit;
+    align-self: var(--sb-column-align-self-lg);
+    order: var(--sb-column-custom-order-lg);
 }
 .wp-block-smart-blocks-columns > .wp-block-smart-blocks-innerblocks-wrap > .block-editor-inner-blocks > .block-editor-block-list__layout [data-type="smart-blocks/column"] [data-type="smart-blocks/columns"] {
     max-width: unset;
