--- a/inc/assets/css/sb-style.css
+++ b/inc/assets/css/sb-style.css
@@ -64,7 +64,6 @@ a {
 .wp-block-smart-blocks-columns>.wp-block-smart-blocks-innerblocks-wrap {
     align-items: var(--sb-columns-align-lg);
     display: flex;
-    flex-direction: var(--sb-columns-flex-direction-lg);
     gap: var(--sb-columns-gap-row-lg, 20px) var(--sb-columns-gap-column-lg, 20px);
     margin-left: auto;
     margin-right: auto;
@@ -123,6 +122,7 @@ a {
     padding-left: var(--sb-column-padding-left-lg, 0);
     padding-right: var(--sb-column-padding-right-lg, 0);
     padding-top: var(--sb-column-padding-top-lg, 0);
+    align-self: var(--sb-column-align-self-lg);
 }
 
 /* Block Title */
